@@ -12,32 +12,32 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortAsc() {
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1", "k1/sk2", "k2", "k2/sk2", "k1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk2", "k2", "k2/sk1", "k2/sk2");
+        List<String> input = List.of("k1/sk1", "k2/sk1", "k1/sk2", "k2", "k2/sk2", "k1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk2", "k2", "k2/sk1", "k2/sk2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1", "k1/sk2", "k2", "k2/sk2", "k1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk2", "k1", "k1/sk1", "k1/sk2");
+        List<String> input = List.of("k1/sk1", "k2/sk1", "k1/sk2", "k2", "k2/sk2", "k1");
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk2", "k1", "k1/sk1", "k1/sk2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
